trunk/Archive2/f2/dc32ee46e8069a/output
main.cpp:3:9: error: 'var' does not name a type
         var zebras = this.game.resPool.get("zebras");
         ^
main.cpp:5:9: error: expected unqualified-id before 'if'
         if (this.game.ironWill) {
         ^
